打了个框架

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div class="topbar">
+      <div class="menutoggle" id="menutoggle"></div>
       <div class="myfavorite">
         <span>My Favorite</span>
       </div>
@@ -25,14 +26,45 @@
     <div class="leftbar">
       <img src="./img/MCD_logo_small.jpg" alt="logo">
       <ul class="menu">
-        <li>Operations</li>
-        <li>Finance</li>
-        <li>Development</li>
-        <li>IT</li>
-        <li>User management</li>
-        <li>Franchising</li>
-        <li>Report</li>
-        <li>Help</li>
+        <li>
+          <a>Operations</a>  
+        </li>
+        <li>
+          <a>Finance</a>  
+          <ul class="submenu">
+              <li>Subnav1</li>
+              <li>Subnav2</li>
+              <li>Subnav3</li>
+          </ul>
+        </li>
+        <li>
+          <a>Development</a>  
+        </li>
+        <li>
+          <a>IT</a> 
+          <ul class="submenu">
+              <li>Subnav1</li>
+              <li>Subnav2</li>
+              <li>Subnav3</li>
+          </ul> 
+        </li>
+        <li>
+          <a>User management</a>  
+        </li>
+        <li>
+          <a>Franchising</a>  
+        </li>
+        <li>
+          <a>Report</a>  
+          <ul class="submenu">
+              <li>Subnav1</li>
+              <li>Subnav2</li>
+              <li>Subnav3</li>
+          </ul>
+        </li>
+        <li>
+          <a>Help</a>  
+        </li>
       </ul>
     </div>
     <div class="content" id="content"></div>
