--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
   <body>
     <div class="topbar">
       <div class="menutoggle" id="menutoggle"></div>
-      <div class="myfavorite">
+      <div class="myfavorite" id="myfavorite">
         <span>My Favorite</span>
       </div>
-      <div class="changetheme">
-        <span>M</span>
-      </div>
-      <div class="username">
-        <span>Paul Smith</span>
+      <div class="topright">
+        <div class="changetheme">
+          <span>M</span>
+        </div>
+        <div class="username hasmessage">
+          <span>Paul Smith</span>
+        </div>
       </div>
     </div>
     <div class="leftbar">
