整合了一下。。还需要kirika721调整下

--- a/index.html
+++ b/index.html
@@ -69,7 +69,83 @@
         </li>
       </ul>
     </div>
-    <div class="content" id="content"></div>
+    <div class="content" id="content">
+      <div class="contitem one-third">
+        <div class="taskContainer">
+          <h5 class="title">TASK CENTER</h5>
+          <div class="itembox">
+            <div class="item newMsg" id="gap" data-num="39">GAP</div>
+            <div class="item newMsg" id="am" data-num="12">AM</div>
+            <div class="item" id="PMT">PMT</div>
+            <div class="item" id="MGIS">MGIS</div>
+            <div class="item newMsg" id="IT" data-num="5">IT</div>
+            <div class="item" id="EMS">EMS</div>
+            <div class="item newMsg" id="BIT" data-num="3">BIT</div>
+          </div>
+        </div>
+      </div>
+      <div class="contitem one-third">
+        <div class="documentContainer">
+          <h5 class="title">DOCUMENT CENTER</h5>
+          <ul>
+            <li>
+              <a>
+                <img src="img/help_center.jpg" alt=""/>
+                <h6>Help Center</h6>
+                <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
+              </a>
+            </li>
+            <li>
+              <a>
+                <img src="img/knowledge.jpg" alt=""/>
+                <h6>Help Center</h6>
+                <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
+              </a>
+            </li>
+            <li>
+              <a>
+                <img src="img/service.jpg" alt=""/>
+                <h6>Help Center</h6>
+                <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
+              </a>
+            </li>
+            <li>
+              <a>
+                <img src="img/kpi.jpg" alt=""/>
+                <h6>Help Center</h6>
+                <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="contitem one-third">
+        <div class="scheduleContainer">
+          <div class="title">
+            <img src="img/flag.png" alt=""/>
+            <strong>Wednesday</strong>
+            <span>2015, Jun 31</span>
+          </div>
+          <ul>
+            <li>
+              <a>MCD_Portal_Prototype_updating<span>10:00</span></a>
+            </li>
+            <li>
+              <a>MCD_Portal_Prototype_updating<span>10:00</span></a>
+            </li>
+            <li>
+              <a>MCD_Portal_Prototype_updating<span>10:00</span></a>
+            </li>
+            <li>
+              <a>MCD_Portal_Prototype_updating<span>10:00</span></a>
+            </li>
+            <li>
+              <a>MCD_Portal_Prototype_updating<span>10:00</span></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <script src="./js/public.js"></script>
 </body>
 </html>
