更新了TaskCenter的样式

--- a/demo.html
+++ b/demo.html
@@ -70,13 +70,17 @@
     <div class="aaaa">
       <div class="taskContainer">
         <h5 class="title">TASK CENTER</h5>
-        <div class="item newMsg" id="gap">GAP</div>
-        <div class="item" id="am">GAP</div>
-        <div class="item">GAP</div>
-        <div class="item">GAP</div>
-        <div class="item">GAP</div>
-        <div class="item">GAP</div>
-        <div class="item">GAP</div>
+        <div>
+          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
+          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
+          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
+          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
+          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
+          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
+          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
+          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
+          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
+        </div>
       </div>
     </div>
     <script src="./js/public.js"></script>
