若宜，我搞进去了

--- a/index.html
+++ b/index.html
@@ -15,6 +15,32 @@
       <div class="menutoggle" id="menutoggle"></div>
       <div class="myfavorite" id="myfavorite">
         <span>My Favorite</span>
+        <div class="alertpanel">
+          <div class="linkbox">
+            <div class="linkitem"><a>Slick Mega Navigation</a></div>
+            <div class="linkitem"><a>Built in BS3+</a></div>
+            <div class="linkitem"><a>Full Customizable</a></div>
+            <div class="linkitem"><a>Huge Components</a></div>
+            <div class="linkitem"><a>Tons of widgets</a></div>
+            <div class="linkitem"><a>Fontawesome</a></div>
+          <!-- </div>
+          <div class="linkbox"> -->
+            <div class="linkitem"><a>Description goes here</a></div>
+            <div class="linkitem"><a>Amaging Dashboard</a></div>
+            <div class="linkitem"><a>Max 5 star ration</a></div>
+            <div class="linkitem"><a>Huge Component and User Likes</a></div>
+            <div class="linkitem"><a>Easy to Cutomize</a></div>
+            <div class="linkitem"><a>Very easy to use</a></div>
+          <!-- </div>
+          <div class="linkbox"> -->
+            <div class="linkitem"><a>Anchor Icon</a></div>
+            <div class="linkitem"><a>Full Customizable</a></div>
+            <div class="linkitem"><a>Slick Mega Navigation</a></div>
+            <div class="linkitem"><a>Slick Mega Navigation</a></div>
+          </div>
+          <a class="addbtn">Add New Link</a>
+          <div class="clear"></div>
+        </div>
       </div>
       <div class="topright">
         <div class="changetheme">
@@ -73,14 +99,14 @@
       <div class="contitem one-third">
         <div class="taskContainer">
           <h5 class="title">TASK CENTER</h5>
-          <div class="itembox">
-            <div class="item newMsg" id="gap" data-num="39">GAP</div>
-            <div class="item newMsg" id="am" data-num="12">AM</div>
-            <div class="item" id="PMT">PMT</div>
-            <div class="item" id="MGIS">MGIS</div>
-            <div class="item newMsg" id="IT" data-num="5">IT</div>
-            <div class="item" id="EMS">EMS</div>
-            <div class="item newMsg" id="BIT" data-num="3">BIT</div>
+          <div>
+            <div><div class="item newMsg" id="gap" data-num="39"><span>GAP</span></div></div>
+            <div><div class="item newMsg" id="am" data-num="12"><span>AM</span></div></div>
+            <div><div class="item" id="PMT"><span>PMT</span></div></div>
+            <div><div class="item" id="MGIS"><span>MGIS</span></div></div>
+            <div><div class="item newMsg" id="IT" data-num="5"><span>IT</span></div></div>
+            <div><div class="item" id="EMS"><span>EMS</span></div></div>
+            <div><div class="item newMsg" id="BIT" data-num="3"><span>BIT</span></div></div>
           </div>
         </div>
       </div>
