DocumentCenter和Schedule的li高度改成百分比

--- a/demo.html
+++ b/demo.html
@@ -15,6 +15,7 @@
     <div class="aaaa">
       <div class="documentContainer">
         <h5 class="title">DOCUMENT CENTER</h5>
+        <div class="listContainer">
         <ul>
           <li>
             <a href="#">
@@ -24,21 +25,28 @@
             </a>
           </li>
           <li>
-            <img src="img/knowledge.jpg" alt=""/>
-            <h6>Help Center</h6>
-            <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
+            <a href="#">
+              <img src="img/knowledge.jpg" alt=""/>
+              <h6>Help Center</h6>
+              <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
+            </a>
           </li>
           <li>
-            <img src="img/service.jpg" alt=""/>
-            <h6>Help Center</h6>
-            <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
+            <a href="#">
+              <img src="img/service.jpg" alt=""/>
+              <h6>Help Center</h6>
+              <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
+            </a>
           </li>
           <li>
-            <img src="img/kpi.jpg" alt=""/>
-            <h6>Help Center</h6>
-            <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
+            <a href="#">
+              <img src="img/kpi.jpg" alt=""/>
+              <h6>Help Center</h6>
+              <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
+            </a>
           </li>
         </ul>
+        </div>
       </div>
     </div>
     <div class="aaaa">
@@ -48,6 +56,7 @@
           <strong>Wednesday</strong>
           <span>2015, Jun 31</span>
         </div>
+        <div class="listContainer">
         <ul>
           <li>
             <a href="#">MCD_Portal_Prototype_updating<span>10:00</span></a>
@@ -65,6 +74,7 @@
             <a href="#">MCD_Portal_Prototype_updating<span>10:00</span></a>
           </li>
         </ul>
+        </div>
       </div>
     </div>
     <div class="aaaa">
