下午先提交下

--- a/index.html
+++ b/index.html
@@ -16,30 +16,24 @@
       <div class="myfavorite" id="myfavorite">
         <span>My Favorite</span>
         <div class="alertpanel">
-          <div class="linkbox">
-            <div class="linkitem"><a>Slick Mega Navigation</a></div>
-            <div class="linkitem"><a>Built in BS3+</a></div>
-            <div class="linkitem"><a>Full Customizable</a></div>
-            <div class="linkitem"><a>Huge Components</a></div>
-            <div class="linkitem"><a>Tons of widgets</a></div>
-            <div class="linkitem"><a>Fontawesome</a></div>
-          <!-- </div>
-          <div class="linkbox"> -->
-            <div class="linkitem"><a>Description goes here</a></div>
-            <div class="linkitem"><a>Amaging Dashboard</a></div>
-            <div class="linkitem"><a>Max 5 star ration</a></div>
-            <div class="linkitem"><a>Huge Component and User Likes</a></div>
-            <div class="linkitem"><a>Easy to Cutomize</a></div>
-            <div class="linkitem"><a>Very easy to use</a></div>
-          <!-- </div>
-          <div class="linkbox"> -->
-            <div class="linkitem"><a>Anchor Icon</a></div>
-            <div class="linkitem"><a>Full Customizable</a></div>
-            <div class="linkitem"><a>Slick Mega Navigation</a></div>
-            <div class="linkitem"><a>Slick Mega Navigation</a></div>
-          </div>
-          <a class="addbtn">Add New Link</a>
-          <div class="clear"></div>
+            <div class="linkitem"><a href="#" target="_blank">Slick Mega Navigation</a></div>
+            <div class="linkitem"><a href="#" target="_blank">Built in BS3+</a></div>
+            <div class="linkitem"><a href="#" target="_blank">Full Customizable</a></div>
+            <div class="linkitem"><a href="#" target="_blank">Huge Components</a></div>
+            <div class="linkitem"><a href="#" target="_blank">Tons of widgets</a></div>
+            <div class="linkitem"><a href="#" target="_blank">Fontawesome</a></div>
+            <div class="linkitem"><a href="#" target="_blank">Description goes here</a></div>
+            <div class="linkitem"><a href="#" target="_blank">Amaging Dashboard</a></div>
+            <div class="linkitem"><a href="#" target="_blank">Max 5 star ration</a></div>
+            <div class="linkitem"><a href="#" target="_blank">Huge Component and User Likes</a></div>
+            <div class="linkitem"><a href="#" target="_blank">Easy to Cutomize</a></div>
+            <div class="linkitem"><a href="#" target="_blank">Very easy to use</a></div>
+            <div class="linkitem"><a href="#" target="_blank">Anchor Icon</a></div>
+            <div class="linkitem"><a href="#" target="_blank">Full Customizable</a></div>
+            <div class="linkitem"><a href="#" target="_blank">Slick Mega Navigation</a></div>
+            <div class="linkitem"><a href="#" target="_blank">Slick Mega Navigation</a></div>
+            <div class="linkitem"><a href="#" target="_blank">Slick Mega Navigation</a></div>
+            <div class="linkitem"><a href="#" target="_blank">Slick Mega Navigation</a></div>
         </div>
       </div>
       <div class="topright">
@@ -96,7 +90,30 @@
       </ul>
     </div>
     <div class="content" id="content">
-      <div class="contitem one-third">
+      <div class="contitem two-third" id="newsblock">
+        <div class="newsContainer">
+          <div class="btngroup">
+            <h5 class="title set">NEWS</h5>
+            <h5 class="title">DASHBOARD</h5>
+          </div>
+          <div class="cont">
+            <div class="banner">
+              <img src="./img/news01.jpg" alt="banner">
+            </div>
+            <div class="news">
+              <div class="cont">
+                <h1>Top News</h1>
+                <div class="cont">
+                  <div class="item"></div>
+                  <div class="item"></div>
+                  <div class="item"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="contitem one-third" id="taskblock">
         <div class="taskContainer">
           <h5 class="title">TASK CENTER</h5>
           <div>
@@ -110,7 +127,7 @@
           </div>
         </div>
       </div>
-      <div class="contitem one-third">
+      <div class="contitem one-third" id="documentblock">
         <div class="documentContainer">
           <h5 class="title">DOCUMENT CENTER</h5>
           <ul>
@@ -145,7 +162,7 @@
           </ul>
         </div>
       </div>
-      <div class="contitem one-third">
+      <div class="contitem one-third" id="scheduleblock">
         <div class="scheduleContainer">
           <div class="title">
             <img src="img/flag.png" alt=""/>
