--- a/index.html
+++ b/index.html
@@ -130,36 +130,38 @@
       <div class="contitem one-third" id="documentblock">
         <div class="documentContainer">
           <h5 class="title">DOCUMENT CENTER</h5>
-          <ul>
-            <li>
-              <a>
-                <img src="img/help_center.jpg" alt=""/>
-                <h6>Help Center</h6>
-                <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
-              </a>
-            </li>
-            <li>
-              <a>
-                <img src="img/knowledge.jpg" alt=""/>
-                <h6>Help Center</h6>
-                <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
-              </a>
-            </li>
-            <li>
-              <a>
-                <img src="img/service.jpg" alt=""/>
-                <h6>Help Center</h6>
-                <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
-              </a>
-            </li>
-            <li>
-              <a>
-                <img src="img/kpi.jpg" alt=""/>
-                <h6>Help Center</h6>
-                <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
-              </a>
-            </li>
-          </ul>
+          <div class="listContainer">
+            <ul>
+              <li>
+                <a>
+                  <img src="img/help_center.jpg" alt=""/>
+                  <h6>Help Center</h6>
+                  <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
+                </a>
+              </li>
+              <li>
+                <a>
+                  <img src="img/knowledge.jpg" alt=""/>
+                  <h6>Help Center</h6>
+                  <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
+                </a>
+              </li>
+              <li>
+                <a>
+                  <img src="img/service.jpg" alt=""/>
+                  <h6>Help Center</h6>
+                  <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
+                </a>
+              </li>
+              <li>
+                <a>
+                  <img src="img/kpi.jpg" alt=""/>
+                  <h6>Help Center</h6>
+                  <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="contitem one-third" id="scheduleblock">
