--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="topbar">
       <div class="menutoggle" id="menutoggle"></div>
-      <div class="myfavorite" id="myfavorite">
+      <div class="myfavorite" id="myfavorite" data-role="switch">
         <span>My Favorite</span>
         <div class="alertpanel">
             <div class="linkitem"><a href="#" target="_blank">Slick Mega Navigation</a></div>
@@ -40,8 +40,12 @@
         <div class="changetheme">
           <span>M</span>
         </div>
-        <div class="username hasmessage">
+        <div class="username hasmessage" id="username" data-role="switch">
           <span>Paul Smith</span>
+          <div class="alertpanel">
+              <div>Profile</div>
+              <div>Log out</div>
+          </div>
         </div>
       </div>
     </div>
