在index里把三个block修改了下

--- a/demo.html
+++ b/demo.html
@@ -81,15 +81,13 @@
       <div class="taskContainer">
         <h5 class="title">TASK CENTER</h5>
         <div>
-          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
-          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
-          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
-          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
-          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
-          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
-          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
-          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
-          <div><div class="item newMsg" id="gap" data-account="10"><span>GAP</span></div></div>
+          <div><div class="item newMsg" id="gap" data-account="10"><span class="vertical-center">GAP</span></div></div>
+          <div><div class="item newMsg" id="am" data-account="10"><span class="vertical-center">AM</span></div></div>
+          <div><div class="item newMsg" id="pmt" data-account="10"><span class="vertical-center">PMT</span></div></div>
+          <div><div class="item newMsg" id="mgis" data-account="10"><span class="vertical-center">MGIS</span></div></div>
+          <div><div class="item newMsg" id="it" data-account="10"><span class="vertical-center">IT</span></div></div>
+          <div><div class="item newMsg" id="ems" data-account="10"><span class="vertical-center">EMS</span></div></div>
+          <div><div class="item newMsg" id="bit" data-account="10"><span class="vertical-center">BIT</span></div></div>
         </div>
       </div>
     </div>
