--- a/index.html
+++ b/index.html
@@ -146,13 +146,13 @@
         <div class="taskContainer">
           <h5 class="title">TASK CENTER</h5>
           <div>
-            <div><div class="item newMsg" id="gap" data-num="39"><span>GAP</span></div></div>
-            <div><div class="item newMsg" id="am" data-num="12"><span>AM</span></div></div>
-            <div><div class="item" id="PMT"><span>PMT</span></div></div>
-            <div><div class="item" id="MGIS"><span>MGIS</span></div></div>
-            <div><div class="item newMsg" id="IT" data-num="5"><span>IT</span></div></div>
-            <div><div class="item" id="EMS"><span>EMS</span></div></div>
-            <div><div class="item newMsg" id="BIT" data-num="3"><span>BIT</span></div></div>
+            <div><div class="item newMsg" id="GAP" data-num="39"><span class="veryCenter">GAP</span></div></div>
+            <div><div class="item newMsg" id="AM" data-num="12"><span class="veryCenter">AM</span></div></div>
+            <div><div class="item" id="PMT"><span class="veryCenter">PMT</span></div></div>
+            <div><div class="item" id="MGIS"><span class="veryCenter">MGIS</span></div></div>
+            <div><div class="item newMsg" id="IT" data-num="5"><span class="veryCenter">IT</span></div></div>
+            <div><div class="item" id="EMS"><span class="veryCenter">EMS</span></div></div>
+            <div><div class="item newMsg" id="BIT" data-num="3"><span class="veryCenter">BIT</span></div></div>
           </div>
         </div>
       </div>
@@ -162,28 +162,28 @@
           <div class="listContainer">
             <ul>
               <li>
-                <a>
+                <a class="verticalCenter">
                   <img src="img/help_center.jpg" alt=""/>
                   <h6>Help Center</h6>
                   <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
                 </a>
               </li>
               <li>
-                <a>
+                <a class="verticalCenter">
                   <img src="img/knowledge.jpg" alt=""/>
                   <h6>Help Center</h6>
                   <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
                 </a>
               </li>
               <li>
-                <a>
+                <a class="verticalCenter">
                   <img src="img/service.jpg" alt=""/>
                   <h6>Help Center</h6>
                   <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
                 </a>
               </li>
               <li>
-                <a>
+                <a class="verticalCenter">
                   <img src="img/kpi.jpg" alt=""/>
                   <h6>Help Center</h6>
                   <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
@@ -200,23 +200,25 @@
             <strong>Wednesday</strong>
             <span>2015, Jun 31</span>
           </div>
-          <ul>
-            <li>
-              <a>MCD_Portal_Prototype_updating<span>10:00</span></a>
-            </li>
-            <li>
-              <a>MCD_Portal_Prototype_updating<span>10:00</span></a>
-            </li>
-            <li>
-              <a>MCD_Portal_Prototype_updating<span>10:00</span></a>
-            </li>
-            <li>
-              <a>MCD_Portal_Prototype_updating<span>10:00</span></a>
-            </li>
-            <li>
-              <a>MCD_Portal_Prototype_updating<span>10:00</span></a>
-            </li>
-          </ul>
+          <div class="listContainer">
+            <ul>
+              <li>
+                <a class="verticalCenter">MCD_Portal_Prototype_updating<span>10:00</span></a>
+              </li>
+              <li>
+                <a class="verticalCenter">MCD_Portal_Prototype_updating<span>10:00</span></a>
+              </li>
+              <li>
+                <a class="verticalCenter">MCD_Portal_Prototype_updating<span>10:00</span></a>
+              </li>
+              <li>
+                <a class="verticalCenter">MCD_Portal_Prototype_updating<span>10:00</span></a>
+              </li>
+              <li>
+                <a class="verticalCenter">MCD_Portal_Prototype_updating<span>10:00</span></a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
