--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link href="" rel="icon">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/public.css">
+    <link rel="stylesheet" href="./css/media768.css">
     <script src="./js/jquery-1.7.2.min.js"></script>
   </head>
   <body>
     <div class="topbar">
+      <img src="./img/MCD_logo_small.jpg" alt="logo">
       <div class="menutoggle" id="menutoggle"></div>
       <div class="myfavorite" id="myfavorite" data-role="switch">
         <span>My Favorite</span>
@@ -50,7 +52,7 @@
       </div>
     </div>
     <div class="leftbar">
-      <img src="./img/MCD_logo_small.jpg" alt="logo">
+      
       <ul class="menu">
         <li>
           <a>Operations</a>  
