--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
           </div>
         </div>
       </div>
+      <div class="clear"></div>
     </div>
     <script src="./js/public.js"></script>
 </body>
