--- a/index.html
+++ b/index.html
@@ -223,6 +223,18 @@
           </div>
         </div>
       </div>
+      <div class="contitem one-third" id="stockblock">
+        <div class="stockContainer">
+        <div class="title">
+          <img src="img/stock.png" alt="" />
+          <span>STOCK</span>
+          <a href="#">×</a>
+        </div>
+        <div class="listContainer">
+          <img src="img/stockimg.png" alt="" />
+        </div>
+      </div>
+      </div>
       <div class="clear"></div>
     </div>
     <script src="./js/public.js"></script>
