姑且看一下pad的效果

--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
           </div>
         </div>
       </div>
+      <div class="slideContainer">
+        <div>
+          <div class="slideBox">
       <div class="contitem one-third" id="documentblock">
         <div class="documentContainer">
           <h5 class="title">DOCUMENT CENTER</h5>
@@ -233,6 +236,10 @@
         <div class="listContainer">
           <img src="img/stockimg.png" alt="" />
         </div>
+      </div>
+      </div>
+      <div class="clear"></div>
+      </div>
       </div>
       </div>
       <div class="clear"></div>
